三个界面基本做完

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="community">社区</string>
     <string name="test">测试</string>
     <string name="manager">我的</string>
+    <string name="search">搜索</string>
 
 </resources>
